--- a/Projet/style.css
+++ b/Projet/style.css
@@ -38,6 +38,19 @@ footer {
 
 
 /****** LOGIN MODAL ******/
+
+.mapsmodal-container {
+	padding: 30px;
+  max-width: 650px;
+  width: 100% !important;
+  background-color: #F7F7F7;
+  margin: 0 auto;
+  border-radius: 2px;
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+  overflow: hidden;
+  font-family: roboto;
+}
+
 .loginmodal-container {
   padding: 30px;
   max-width: 350px;
